# ipglasma

./: .gitignore  CMakeLists.txt  CompileNiklasMac.sh  CoriCompile.sh  GNUmakefile  README.md  benchmark.md  compile_IPGlasma.sh  correct.out  input  input_read  input_write  known_nuclei.in  qs2Adj_vs_Tp_vs_Y_200.in  qs2Adj_vs_Tp_vs_Y_ext.in  rVr.in
CMakeModules/: FindFFTW.cmake
docker/: Dockerfile
ipglasma_fast_wilsonlines/ipglasma_fast_wilsonlines.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ipglasma_fast_wilsonlines/ipglasma_fast_wilsonlines.xcodeproj/project.xcworkspace/xcuserdata/niklasmueller.xcuserdatad/: UserInterfaceState.xcuserstate
ipglasma_fast_wilsonlines/ipglasma_fast_wilsonlines.xcodeproj/xcuserdata/niklasmueller.xcuserdatad/xcschemes/: xcschememanagement.plist
nucleusConfigurations/: C12_VMC.bin.in  C12_alphaCluster.bin.in  He3.bin.in  O16_VMC.bin.in  O16_alphaCluster.bin.in
src/: CMakeLists.txt  Cell.cpp  Cell.h  Data.h  Evolution.cpp  Evolution.h  FFT.cpp  FFT.h  Fragmentation.cpp  Fragmentation.h  GNUmakefile  GaugeFix-new.cpp  GaugeFix-old.cpp  GaugeFix.cpp  GaugeFix.h  Glauber.cpp  Glauber.h  Group.cpp  Group.h  INTELmakefile  Init.cpp  Init.h  Lattice.cpp  Lattice.h  Matrix.cpp  Matrix.h  MyEigen.cpp  MyEigen.h  NIKLAS_DEBUG.cpp  NIKLAS_MAIN.cpp  NIKLAS_compute_dipole_amplitude.h  NIKLAS_global_params.h  NIKLAS_grids.h  NIKLAS_interpolation.h  NIKLAS_kinematics.h  NIKLAS_random_seed.h  NIKLAS_wilsonlines_IO.h  NiklasMacMakefile  OutputManagment.h  Parameters.cpp  (+16 more)
tables/: posterior.csv  posterior5020_Nq3.csv  posterior_Nq3.csv
utilities/: combine_events_into_hdf5.py  plotu0_secong_shit.py  read_test.cc  saveToBinaryFile.py  save_to_binary.cc  zplotu0_second_wilsonline.py
